--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "typescript": "^4.0.2"
   },
   "dependencies": {
+    "@types/react-redux": "^7.1.9",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-redux": "^7.2.1",
+    "redux": "^4.0.5"
   }
 }
